# waifubot-sagg

./: .gitignore  Dockerfile  README.md  discord.Dockerfile  flask.Dockerfile  pyproject.toml  shell.nix  test.py
.github/workflows/: main.yml  python-package.yml
WaifuTrade/: __init__.py
WaifuTrade/Data/: collection.py  database.py  test_database.py
WaifuTrade/Discord/: Dockerfile  bot.py
WaifuTrade/Flask/: Dockerfile  backend.py
WaifuTrade/Flask/templates/: index.html
nix/: sources.json
src/: backend.py  backendModels.py  basemodels.py  bot.py  collection.py  database.py  discordBot.py  test_database.py
src/data/: __init__.py  basemodels.py  collection.py  database.py  test_database.py
src/discord/cogs/: ClaimWaifu.py  bot.py  claimWaifu.py  inventory.py  leaderboard.py
src/templates/: base.html  index.html  inventory.html  leaderboard.html  waifuLeaderboard.html
src/web/: utility.py  views.py
src/web/setup/: cache.py  discordOauth.py  flask.py
