[tool.poetry]
name = "waifu-sagg"
version = "0.1.0"
description = ""
authors = ["saggins <win32prog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
pydantic = "^1.8.2"
discord = "^1.0.1"
flask = "^2.0.1"
colorama = "^0.4.4"
Flask-Discord = "^0.1.64"
pytest = "^6.2.4"
SQLAlchemy = "^1.4.19"
MarkupSafe = "^2.0.1"
waitress = "^2.0.0"
Flask-Caching = "^1.10.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
